Fix: Fix scrollbar styles on big screens.

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@
     @apply flex gap-3 items-center py-1 md:p-3 2xl:p-4 rounded-[8px] justify-center md:justify-start;
   }
   .sidebar-label {
-    @apply text-sm font-semibold text-gray-100 lg:text-lg;
+    @apply text-sm font-semibold text-gray-100;
   }
   /* .sidebar-layout {
     @apply flex h-16 items-center justify-between p-5 shadow-sidebar sm:p-8 md:hidden;
